; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_digest.c_digest_async_digest.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_digest.c_digest_async_digest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, %struct.crypto_tfm* }
%struct.crypto_tfm = type { i32 }
%struct.hash_desc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ahash_request*)* @digest_async_digest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @digest_async_digest(%struct.ahash_request* %0) #0 {
  %2 = alloca %struct.ahash_request*, align 8
  %3 = alloca %struct.crypto_tfm*, align 8
  %4 = alloca %struct.hash_desc, align 4
  store %struct.ahash_request* %0, %struct.ahash_request** %2, align 8
  %5 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %6 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %5, i32 0, i32 3
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load %struct.crypto_tfm*, %struct.crypto_tfm** %7, align 8
  store %struct.crypto_tfm* %8, %struct.crypto_tfm** %3, align 8
  %9 = getelementptr inbounds %struct.hash_desc, %struct.hash_desc* %4, i32 0, i32 0
  %10 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %11 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %10, i32 0, i32 3
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %9, align 4
  %14 = getelementptr inbounds %struct.hash_desc, %struct.hash_desc* %4, i32 0, i32 1
  %15 = load %struct.crypto_tfm*, %struct.crypto_tfm** %3, align 8
  %16 = call i32 @__crypto_hash_cast(%struct.crypto_tfm* %15)
  store i32 %16, i32* %14, align 4
  %17 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %18 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %21 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %24 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @digest(%struct.hash_desc* %4, i32 %19, i32 %22, i32 %25)
  ret i32 %26
}

declare dso_local i32 @__crypto_hash_cast(%struct.crypto_tfm*) #1

declare dso_local i32 @digest(%struct.hash_desc*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
